--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = etlambda
-version = 0.0.1
+version = 0.1.1
 author = Diego Moreira and Alisson Palmeira
 author_email = diego@khartes.com.br and alisson.palmeira@gmail.com
 description = ETL lambda layer
@@ -18,4 +18,17 @@ classifiers =
 
 [options]
 packages = etlambda
-python_requires = >=3.6
+python_requires = >=3.7
+
+[options.extras_require]
+EXTRACT_GBQ = requests==2.25.1; Unidecode==1.2.0; pandas-gbq==0.15.0
+EXTRACT_GEE = requests==2.25.1; Unidecode==1.2.0; earthengine-api==0.1.265
+EXTRACT_HTTP = requests==2.25.1; Unidecode==1.2.0
+EXTRACT_INCRA = requests==2.25.1; Unidecode==1.2.0; beautifulsoup4==4.5.3
+EXTRACT_SICAR = requests==2.25.1; Unidecode==1.2.0; aws-requests-auth==0.4.3; Pillow==7.0.0; remotezip==0.9.3; 2captcha-python==1.1.0
+EXTRACT_SIDRA = requests==2.25.1; Unidecode==1.2.0
+EXTRACT_WFS = requests==2.25.1; Unidecode==1.2.0
+LOAD_RASTER = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17; gdal2pgsql@https://github.com/khartes/gdal2pgsql/archive/refs/tags/v0.1.zip
+LOAD_TABLE = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17; pandas==1.2.4; openpyxl==3.0.7; xlrd==2.0.1
+LOAD_VECTOR = gdal2pgsql@https://github.com/khartes/gdal2pgsql/archive/refs/tags/v0.1.zip
+ENRICH = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17
