ajustes em options.extras_require

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ packages = etlambda
 python_requires = >=3.7
 
 [options.extras_require]
+ENRICH_DATA = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17
 EXTRACT_GBQ = requests==2.25.1; Unidecode==1.2.0; pandas-gbq==0.15.0
 EXTRACT_GEE = requests==2.25.1; Unidecode==1.2.0; earthengine-api==0.1.265
 EXTRACT_HTTP = requests==2.25.1; Unidecode==1.2.0
@@ -31,4 +32,3 @@ EXTRACT_WFS = requests==2.25.1; Unidecode==1.2.0
 LOAD_RASTER = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17; gdal2pgsql@https://github.com/khartes/gdal2pgsql/archive/refs/tags/v0.1.zip
 LOAD_TABLE = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17; pandas==1.2.4; openpyxl==3.0.7; xlrd==2.0.1
 LOAD_VECTOR = gdal2pgsql@https://github.com/khartes/gdal2pgsql/archive/refs/tags/v0.1.zip
-ENRICH = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17
