--- a/setup.cfg
+++ b/setup.cfg
@@ -30,5 +30,5 @@ EXTRACT_SICAR = requests==2.25.1; Unidecode==1.2.0; aws-requests-auth==0.4.3; Pi
 EXTRACT_SIDRA = requests==2.25.1; Unidecode==1.2.0
 EXTRACT_WFS = requests==2.25.1; Unidecode==1.2.0
 LOAD_RASTER = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17; gdal2pgsql@https://github.com/khartes/gdal2pgsql/archive/refs/tags/v0.1.zip
-LOAD_TABLE = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17; pandas==1.2.4; openpyxl==3.0.7; xlrd==2.0.1
+LOAD_TABLE = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17; pandas==1.2.4; pyarrow==5.0.0; openpyxl==3.0.7; xlrd==2.0.1
 LOAD_VECTOR = gdal2pgsql@https://github.com/khartes/gdal2pgsql/archive/refs/tags/v0.1.zip
