--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ EXTRACT_GBQ = requests==2.25.1; Unidecode==1.2.0; pandas-gbq==0.15.0
 EXTRACT_GEE = requests==2.25.1; Unidecode==1.2.0; earthengine-api==0.1.265
 EXTRACT_HTTP = requests==2.25.1; Unidecode==1.2.0
 EXTRACT_INCRA = requests==2.25.1; Unidecode==1.2.0; beautifulsoup4==4.5.3
-EXTRACT_SICAR = requests==2.25.1; Unidecode==1.2.0; aws-requests-auth==0.4.3; Pillow==7.0.0; remotezip==0.9.3; git+https://github.com/khartes/2captcha-python.git#egg=2captcha-python
+EXTRACT_SICAR = requests==2.25.1; Unidecode==1.2.0; aws-requests-auth==0.4.3; Pillow==7.0.0; remotezip==0.9.3; 2captcha-python @ git+https://github.com/khartes/2captcha-python.git
 EXTRACT_SIDRA = requests==2.25.1; Unidecode==1.2.0
 EXTRACT_WFS = requests==2.25.1; Unidecode==1.2.0
 LOAD_RASTER = psycopg2-binary==2.8.6; SQLAlchemy==1.4.17; gdal2pgsql@https://github.com/khartes/gdal2pgsql/archive/refs/tags/v0.1.zip
